--- a/index.html
+++ b/index.html
@@ -6,56 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 	<title>baroombi</title>
-	<link href="css/baroombi.css" rel="stylesheet" />
-	<link href="css/animate.css" rel="stylesheet"/>
-	  
-	</head>
-	<body>
-	  <div id="header">
-		<div id="title">baroombi</div>
-		<div id="menu-toggle">
-		  <div class="bar0"></div>
-		  <div class="bar0"></div>
-		  <div class="bar0"></div>
-		</div>
-	  </div>
-	  
-	  <div id="menu-shadow" class="hidden"></div>
-	  <div id="menu" class="hidden">
-		<div id="mbg"></div>
-		<div id="mc">
-		  <div id="mhome" class="menu-item">Home</div>
-		  <div id="mabout" class="menu-item">About</div>
-		  <div id="mproject" class="menu-item">Projects</div>
-		  <div id="mcontact" class="menu-item">Contact</div>
-		</div>
-	  </div>
-	  
-	  <div id="content">
-		<section id="shome" class="section col-a0">
-		  <div class="center">
-			<h3>welcome to baroombi</h3>
-			no content here yet
-		  </div>
-		</section>
-		
-		<div id="sabout" class="section bg-00a0a0">
-		  <h4>About</h4>
-		  no content here yet.
-		</div>
-		
-		<div id="sproject" class="section col-a0">
-		  <h4>Our Work</h4>
-		  no content here yet
-		</div>
-		
-		<div id="scontact" class="section bg-00a0a0">
-		  <h4>Contact</h4>
-		  no content here yet
-		</div>
-		
-	  </div>
-	  
-	  <script src="js/app.js"></script>
-	</body>
+	<link href="css/baroombi.css" rel="stylesheet" />	  
+  </head>
+  <body>
+  	<div id="bg-shadow"></div>
+  	<div id="header">Welcome to <div id="brand">baroombi</div></div>
+
+  	<div id="notready">
+  		<p> we're working very hard to add some useful content here..</p>
+  		<div><p>In the meantime, check out our <a class="github_redirect" href="https://github.com/baroombi"><txt>github page</txt></a></p></div>
+  	</div>
+
+  	
+  </body>
 </html>
